fix not full width on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,27 @@
 /* additional classes */
 
+html,body
+{
+    
+    
+}
+
+header{
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+	overflow-x: hidden;
+}
+
+/*
+* {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
+*/
+
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
 	
